--- a/style.css
+++ b/style.css
@@ -14,11 +14,12 @@ h1{
    
 }
 .orange{
-    color: orange;
+    color: rgb(250, 186, 67);
 }
 .flexble{
     display: flex;
     margin-bottom: 150px;
+    padding-left: 5%;
 }
 .half-width{
     width: 50%;
@@ -36,4 +37,34 @@ h1{
     padding: 10px 40px;
     border: rgb(255, 51, 0) ;
     border-radius: 5px;
+}
+#second{
+    font: 30%;
+}
+.blue{
+    color: rgb(18, 18, 44);
+}
+.yellow{
+    color: rgb(250, 186, 67);
+}
+.mission-item{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    background-color: rgb(231, 229, 229);
+    padding-left: 10px;
+}
+.mission-item-2nd{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+background-color: rgb(239, 240, 240);
+ padding-left: 10px;
+}
+.mission-item-3rd{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+background-color:rgb(231, 229, 231);
+ padding-left: 10px;
 }
