--- a/style.css
+++ b/style.css
@@ -81,4 +81,22 @@ border-radius: 5%;
     background-repeat:no-repeat;
     margin:none ;
 }
-
+#application{
+    font-size: 50px;
+}
+#breast-app{
+    padding-left: 70%;
+}
+.white-color{
+    color: white;
+}
+#pink-color{
+    color: rgb(250, 35, 71);
+}
+    
+footer div{
+    background-color: black;
+    text-align: center;
+    padding-top: 3%;
+    padding-bottom: 4%;
+}
